--- a/src/lawnbot_description/models/tracking_object_1/model.config
+++ b/src/lawnbot_description/models/tracking_object_1/model.config
@@ -1,11 +1,13 @@
 <?xml version="1.0" ?>
 <model>
-    <name>grassplane</name>
+    <name>tracking_object_1</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
-        <name></name>
+        <name><Josiah Laivins/name>
         <email></email>
     </author>
-    <description></description>
+    <description>
+        Simulates a plant-like obstical
+    </description>
 </model>
