Fixed the model issues. Needed to edit the .gazibo ini. Created a test course

--- a/src/lawnbot_description/models/course_walls_1/course_walls_1/model.config
+++ b/src/lawnbot_description/models/course_walls_1/course_walls_1/model.config
@@ -1,13 +1,11 @@
 <?xml version="1.0" ?>
 <model>
-    <name>tracking_object_1</name>
+    <name>course_walls_1</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
-        <name>Josiah Laivins</name>
+        <name></name>
         <email></email>
     </author>
-    <description>
-        Simulates a plant-like obstical
-    </description>
+    <description></description>
 </model>
