I have state space creation working. Now I can start converting laser readings to state locations. There is a function for this but i want to create more work for myself trololol

--- a/src/lawnbot_description/package.xml
+++ b/src/lawnbot_description/package.xml
@@ -70,7 +70,7 @@
       <gazebo_ros
           gazebo_plugin_path="${prefix}/lib"
           gazebo_model_path="${prefix}/.."
-          gazebo_media_path="${prefix}/.."/>/>
+          gazebo_media_path="${prefix}/.."/>
   </export>
 
 </package>
